--- a/services/web/Dockerfile
+++ b/services/web/Dockerfile
@@ -2,7 +2,7 @@
 FROM python:3.13-slim-bookworm
 
 # set work directory
-WORKDIR /usr/src/app
+WORKDIR /usr/local/bin
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
@@ -13,18 +13,18 @@ RUN apt update && apt install -y netcat-traditional dos2unix
 
 # install dependencies
 RUN pip install --upgrade pip
-COPY ./requirements.txt /usr/src/app/requirements.txt
+COPY ./requirements.txt /usr/local/bin/requirements.txt
 RUN pip install -r requirements.txt
 
 # copy project
-COPY . /usr/src/app/
+COPY . /usr/local/bin/
 
-# Make sure /usr/src/app/entrypoint.sh is executable and dos2unix
-RUN chmod +x /usr/src/app/entrypoint.sh
-RUN dos2unix /usr/src/app/entrypoint.sh
+# Make sure /usr/local/bin/entrypoint.sh is executable and dos2unix
+RUN chmod +x /usr/local/bin/entrypoint.sh
+RUN dos2unix /usr/local/bin/entrypoint.sh
 
 ENV FLASK_APP=project/__init__.py
 
 # run entrypoint.sh
 ENV FLASK_APP=project.wsgi
-ENTRYPOINT ["/usr/src/app/entrypoint.sh"]
+ENTRYPOINT ["/usr/local/bin/entrypoint.sh"]
